--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
     - name: Install Zola
-      run: |
-        curl -L https://github.com/getzola/zola/releases/download/v0.19.2/zola-v0.19.2-x86_64-unknown-linux-gnu.tar.gz -o zola.tar.gz
-        tar -xzf zola.tar.gz
-        sudo mv zola /usr/local/bin/
+      uses: taiki-e/install-action@v2
+      with:
+        tool: zola@0.19.2
 
     - name: Build the Zola site
       run: zola build
