--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,2 +1,13 @@
 RewriteEngine On
+
+# www. -> .
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+# http -> https
+RewriteCond %{HTTPS} !on
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+# HSTS
+Header always set Strict-Transport-Security "max-age=31536000"
+
 ErrorDocument 404 /404.html
